# esa-apex-toolbox-python

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: unittests.yaml
oidc-device-flow/: helpers.py  oidc-cli-example.py
src/esa_apex_toolbox/: algorithms.py
src/esa_apex_toolbox/upscaling/: udp_job_manager.py
tests/: test_algorithms.py  test_udp_job_manager.py
tests/data/ogcapi-records/: algorithm01.json
