[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "esa-apex-toolbox"
dynamic = ["version"]
authors = [
  { name="Stefaan Lippens", email="stefaan.lippens@vito.be" },
]
description = "Python toolbox to interact with ESA APEx"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
keywords = ["ESA", "EO", "Earth observation", "openEO"]
dependencies = [
    "requests",
]

[project.urls]
Homepage = "https://github.com/ESA-APEx/esa-apex-toolbox-python"
Issues = "https://github.com/ESA-APEx/esa-apex-toolbox-python/issues"

[project.optional-dependencies]
tests = [
    "pytest",
    "requests_mock",
]
dev = [
    "pytest",
    "requests_mock",
]

[tool.hatch.version]
path = "src/esa_apex_toolbox/_about.py"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 120
